[gd_scene load_steps=6 format=3 uid="uid://c42l0q6o71v4j"]

[ext_resource type="PackedScene" uid="uid://b3ofrj3jtgs13" path="res://UI/Settings/input_button.tscn" id="1_41saw"]
[ext_resource type="Script" path="res://UI/Settings/input_settings.gd" id="1_ppfe8"]
[ext_resource type="FontFile" uid="uid://iua8btsbjy5v" path="res://Fonts/Pixica-Bold.ttf" id="2_dt6ng"]
[ext_resource type="AudioStream" uid="uid://6cwe4vngu5ii" path="res://Sounds/SFX/SE_BTL_BEEP2.wav" id="3_gjhrs"]
[ext_resource type="AudioStream" uid="uid://iik8xvfd5ml7" path="res://Sounds/SFX/SE_BTL_BEEP3.wav" id="4_2cv84"]

[node name="InputSettings" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ppfe8")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -483.0
offset_top = -291.0
offset_right = 483.0
offset_bottom = 291.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2

[node name="Back" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_dt6ng")
text = "Back
"

[node name="ScrollContainer" type="ScrollContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="ActionList" type="VBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="InputButton" parent="PanelContainer/MarginContainer/VBoxContainer/ScrollContainer/ActionList" instance=ExtResource("1_41saw")]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_dt6ng")

[node name="Sounds" type="Node" parent="."]

[node name="ButtonPress" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource("3_gjhrs")
volume_db = -20.0
bus = &"SFX"

[node name="BackButtonPress" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource("4_2cv84")
volume_db = -20.0
bus = &"SFX"

[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/Back" to="." method="_on_back_pressed"]
